test/functions/resolution/errors/printAdditionalErrors-1.compopts
                           # printAdditionalErrors-1.dflt.good
--print-additional-errors  # printAdditionalErrors-1.pae.good
